--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -28,5 +28,8 @@
 }
 #userInfo .weui-cell__hd {
   width: 50%;
-  text-align: left
+  text-align: left;
+}
+#userInfo .weui-cells {
+  font-size: 16px;
 }
