--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,3 +1,6 @@
+.marginT5 {
+  margin-top: 5px
+}
 .marginT20 {
   margin-top: 20px
 }
@@ -26,10 +29,19 @@
 #userInfo .weui-cells {
   margin-top: 0
 }
-#userInfo .weui-cell__hd {
+#userInfo .weui-cell__hd, #newApply .weui-cell__hd {
   width: 50%;
   text-align: left;
 }
+#newApply .itemNumber .weui-cell__hd, #newApply .vux-x-textarea .weui-cell__hd {
+  width: 0
+}
 #userInfo .weui-cells {
   font-size: 16px;
+}
+.prove .vux-slider, .prove .vux-slider > .vux-swiper {
+  overflow: initial
+}
+#newApply .vux-no-group-title {
+  margin-top: 0
 }
